# smtp-mail

./: .gitignore  CHANGELOG.md  LICENSE  README.md  smtp-mail.cabal
.github/: ISSUE_AND_PULL_REQUEST_TEMPLATE.md
Network/Mail/: SMTP.hs
Network/Mail/SMTP/: Auth.hs  Types.hs
nix-integration-test/: integration-test.nix  nixpkgs-commit.nix  nixpkgs.nix  shell.nix
nix-integration-test/integration-test/: Main.hs  integration-test.cabal
