name:                smtp-mail
version:             0.2.0.0
synopsis:            Simple email sending via SMTP
description:         This packages provides a simple interface for mail over SMTP. PLease see the README for more information.
homepage:            http://github.com/jhickner/smtp-mail
license:             BSD3
license-file:        LICENSE
author:              Jason Hickner, Matt Parsons
maintainer:          parsonsmatt@gmail.com
-- copyright:
category:            Network
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:
    README.md
  , CHANGELOG.md

source-repository head
  type: git
  location: git@github.com:jhickner/smtp-mail.git

library
  exposed-modules:
    Network.Mail.SMTP
    Network.Mail.SMTP.Auth
    Network.Mail.SMTP.Types

  -- other-modules:

  build-depends: base >= 4.5 && < 5
               , array
               , base16-bytestring
               , base64-bytestring
               , bytestring
               , connection
               , cryptohash
               , filepath
               , mime-mail
               , network
               , network-bsd
               , text

  ghc-options: -Wall -fwarn-tabs
