name:                smtp-mail
version:             0.2.0.0
synopsis:            Simple email sending via SMTP
description:         This packages provides a simple interface for mail over SMTP. PLease see the README for more information.
homepage:            http://github.com/jhickner/smtp-mail
license:             BSD3
license-file:        LICENSE
author:              Jason Hickner, Matt Parsons
maintainer:          parsonsmatt@gmail.com
-- copyright:
category:            Network
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC ==8.4.4 || ==8.6.5 || ==8.8.1

extra-source-files:
    README.md
  , CHANGELOG.md

source-repository head
  type: git
  location: git@github.com:jhickner/smtp-mail.git

library
  exposed-modules:
    Network.Mail.SMTP
    Network.Mail.SMTP.Auth
    Network.Mail.SMTP.Types

  -- other-modules:

  build-depends: base              >= 4.11     && < 4.14
               , array             >= 0.5.2.0  && < 0.6
               , base16-bytestring >= 0.1.1.5  && < 0.2
               , base64-bytestring >= 0.1.1.3  && < 1.1
               , bytestring        >= 0.10.8.2 && < 0.11
               , connection        >= 0.2.5    && < 0.4
               , cryptohash        >= 0.7.5    && < 0.12
               , filepath          >= 1.4.2    && < 1.5
               , mime-mail         >= 0.5      && < 0.6
               , network           >= 2.7.0.0  && < 3.2
               , network-bsd       >= 2.7.0.0  && < 2.9
               , text              >= 1.2.3.0  && < 1.3

  ghc-options: -Wall -fwarn-tabs
