name:                smtp-mail
version:             0.3.0.0
synopsis:            Simple email sending via SMTP
description:         This packages provides a simple interface for mail over SMTP. PLease see the README for more information.
homepage:            http://github.com/jhickner/smtp-mail
license:             BSD3
license-file:        LICENSE
author:              Jason Hickner, Matt Parsons
maintainer:          parsonsmatt@gmail.com
-- copyright:
category:            Network
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    README.md
  , CHANGELOG.md

source-repository head
  type: git
  location: git@github.com:jhickner/smtp-mail.git

library
  default-language: Haskell2010
  exposed-modules:
    Network.Mail.SMTP
    Network.Mail.SMTP.Auth
    Network.Mail.SMTP.Types

  -- other-modules:

  build-depends: base >= 4.5 && < 5
               , array
               , base16-bytestring
               , base64-bytestring
               , bytestring
               , connection
               , filepath
               , mime-mail
               , network
               , network-bsd
               , text
               , cryptonite
               , memory

  ghc-options: -Wall -fwarn-tabs
