name:                integration-test
version:             0.0.0.1
synopsis:            Simple test program for smtp-mail
description:         Test program used for integration test of smtp-mail. It expects a mail host acme.test to be reachable.
homepage:            http://github.com/jhickner/smtp-mail
license:             BSD3
license-file:        LICENSE
author:              Eric Wolf
maintainer:          ericwolf42@gmail.com
-- copyright:
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable integration-test
  default-language: Haskell2010

  build-depends: base >= 4.5 && < 5
               , smtp-mail
               , mime-mail
               , hspec
               , hspec-expectations

  ghc-options: -fwarn-tabs

  hs-source-dirs: .

  main-is: Main.hs
